# roast-my-code

./: .gitignore  LICENSE  README.md  action.yml  api.py  index.py  package.json  pyproject.toml  vercel.json
.github/: demo.tape
.github/workflows/: generate-demo.yml  roast-famous.yml  verify.yml
api/: index.py  roast.py
famous-roasts/2026-02-28/django/: django.html  django.txt
famous-roasts/2026-02-28/flask/: flask.html  flask.txt
famous-roasts/2026-02-28/requests/: requests.html  requests.txt
roast/: __init__.py  analyzer.py  cli.py  custom_rules.py  history.py  reporter.py  roaster.py  scanner.py  security.py
roast/templates/: report.html
tests/: test_analyzer.py  test_cli.py  test_reporter.py  test_scanner.py  test_security.py
web/: .env.example  next.config.mjs  package-lock.json  package.json  requirements.txt  tailwind.config.ts  vercel.json
web/api/: roast.py
web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
web/app/gallery/: page.tsx
web/app/roast/[id]/: page.tsx
web/components/: IssueTable.tsx  RoastInput.tsx  ScoreRing.tsx  ShareButtons.tsx
