[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roast-my-code"
version = "0.1.0"
description = "A brutally honest, funny AI-powered code quality roaster"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer[all]",
  "rich",
  "openai",
  "gitpython",
  "jinja2",
]

[project.scripts]
roast = "roast.cli:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
